--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,7 @@
   
   /* контейнер навигации */
   .header__menu {
-    justify-self: flex-start;
-    align-self: center;
+
   }
   
   /* список ссылок */
@@ -22,6 +21,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    justify-self: flex-start;
+    align-self: center;
   }
   
   /* пункт списка ссылок */
@@ -58,7 +59,7 @@
   }
   
   /* выравнивание блока с адресом */
-  .header__address {
+  .address {
     justify-self: flex-end;
     align-self: center;
     display: flex;
@@ -116,12 +117,15 @@
   .aligned-text_center {
     line-height: 100%;
     justify-self: center;
-    margin-right: 60px;
+    margin-left: 30px;
+    margin-top: 8px;
   }
   
   .aligned-text_right {
     line-height: 100%;
     justify-self: end;
+    margin-top: 15px;
+    margin-right: -30px;
   }
   
   /* класс для управления межбуквенным расстоянием в местах, где есть эти акценты */
@@ -140,7 +144,7 @@
     gap: 107px;
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 135px;
+    margin-top: 113px;
     padding-bottom: 50px;
   }
   
@@ -155,6 +159,14 @@
     align-self: center;
     line-height: 28px;
   }
+
+  .word-spacing-1 {
+    word-spacing: 20px;
+  }
+
+  .word-spacing-2 {
+    word-spacing: 18px;
+  }
   
   /* кнопка «Сделать ставку» */
   .bet-button {
@@ -166,7 +178,7 @@
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
-    border: 1px solid #fff;
+    border: 1px solid currentColor;
     background-color: transparent;
     padding-top: 12px;
     padding-right: 32px; /* уменьшил на 4px, подгоняя в PixelPerfect под экран 1440 */
@@ -200,6 +212,14 @@
     list-style: none;
     gap: 25px;
   }
+
+  .lots__card-list-item {
+    background-size: cover;
+    background-position: center;
+    min-height: 450px;
+    position: relative;
+    z-index: 0;
+  }
   
   /* ссылка, обрамляющая карточку */
   .card-link {
@@ -210,34 +230,22 @@
   .card {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 596px;
     margin-left: 40px;
     margin-right: 40px;
   }
   
   /* классы, чтобы задать определённый фон каждой из карточек */
   .card_type_film {
-    background-size: cover;
     background-image: url(../images/card-lot-01.jpg);
-    min-height: 450px;
-    position: relative;
-    z-index: 0;
   }
   
   .card_type_book {
-    background-size: cover;
     background-image: url(../images/card-lot-02.jpg);
-    min-height: 450px;
-    position: relative;
-    z-index: 0;
   }
   
   .card_type_picture {
-    background-size: cover;
     background-image: url(../images/card-lot-03.jpg);
-    min-height: 450px;
-    position: relative;
-    z-index: 0;
   }
   
   /* заголовок карточки */
@@ -267,6 +275,7 @@
   
   /* ссылка «Посмотреть больше» */
   .lots__look-more-link {
+    display: inline-block;
     color: #000;
     font-size: 20px;
     font-style: normal;
@@ -274,7 +283,7 @@
     line-height: normal;
     margin-top: 30px;
     margin-left: 40px;
-    margin-bottom: 2px;
+    /*margin-bottom: 2px;*/
   }
   
   /* четвертый блок сайта */
@@ -298,8 +307,8 @@
     width: 240px;
     height: 240px;
     background-color: #000;
-    border-radius: 120px;
-    margin-left: 95px;
+    border-radius: 50%;
+    margin-left: 48px;
     margin-right: 95px;
   }
   
@@ -316,6 +325,7 @@
   /* класс для колонки со статьей */
   .about__column {
     margin-top: 100px;
+    margin-left: -95px;
   }
   
   /* заголовок секции */
@@ -348,18 +358,12 @@
     margin-right: 50px;
     margin-top: 186px; /* увеличил на 6px, подгоняя в PixelPerfect под экран 1440 */
   }
+
+  .address__left {
+    margin-right: 90px;
+  }
   
   /* блок навигации по списку ссылок */
-  .footer__address {
-    color: #000;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 135%;
-    display: flex;
-    flex-direction: column;
-    min-width: 240px;
-  }
   
   .footer__menu {
     text-align: center;
